--- a/pages/stats.html
+++ b/pages/stats.html
@@ -19,13 +19,13 @@
       rel="shortcut icon"
       href="../assets/img/Drawing1-Model.svg"
       type="image/x-icon">
-    <title>Home</title>
+    <title>Stats</title>
   </head>
 
   <body>
     <header class="d-flex justify-content-center flex-column">
       <nav class="navbar navbar-expand-md navbar-dark bd-navbar bg-dark">
-        <div class="container-fluid d-flex flex-wrap flex-md-nowrap">
+        <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
           <figure class="my-0">
             <img
               src="../assets/img/Logo_Amazing_Events.png"
@@ -74,9 +74,7 @@
 
               <li
                 class="nav-item btn btn-outline-danger p-0 m-1 col-6 col-md-auto">
-                <a class="nav-link" href="past_events.html"
-                  >Past Events</a
-                >
+                <a class="nav-link" href="past_events.html">Past Events</a>
               </li>
 
               <li
@@ -94,23 +92,25 @@
       </nav>
 
       <!-- CAROUSEL -->
-      <div class="blur">
-        <div id="carouselExample" class="carousel slide">
+      <div class="bg-dark bg-gradient">
+        <div id="carouselExample" class="container-xxl carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <h2 class="text-center p-5 w-100">HOME</h2>
+              <h2 class="text-center p-5 text-light-emphasis">HOME</h2>
             </div>
             <div class="carousel-item">
-              <h2 class="text-center p-5 w-100 text-muted">UPCOMING EVENTS</h2>
+              <h2 class="text-center p-5 text-light-emphasis">
+                UPCOMING EVENTS
+              </h2>
             </div>
             <div class="carousel-item">
-              <h2 class="text-center p-5 w-100 text-muted">PAST EVENTS</h2>
+              <h2 class="text-center p-5 text-light-emphasis">PAST EVENTS</h2>
             </div>
             <div class="carousel-item">
-              <h2 class="text-center p-5 w-100 text-muted">CONTACT</h2>
+              <h2 class="text-center p-5 text-light-emphasis">CONTACT</h2>
             </div>
             <div class="carousel-item">
-              <h2 class="text-center p-5 w-100 text-muted">STATS</h2>
+              <h2 class="text-center p-5 text-light-emphasis">STATS</h2>
             </div>
           </div>
           <button
@@ -133,12 +133,118 @@
       </div>
     </header>
 
-    <main>
-    
+    <main class="container">
+
+      <div class="container">
+        <div class="pt-5">
+
+          <!-- tabla 1 -->
+          <table class="table table-danger table-hover m-0">
+            <thead>
+              <tr>
+                <th colspan="3" scope="col" class="fs-4 text-center bg-gradient">
+                  Events statistics
+                </th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr class="row m-0">
+                <td class="col-4">Events with highest percentage of attendance</td>
+                <td class="col-4">Events with lowest percentage of attendance</td>
+                <td class="col-4">Events with larger capacity</td>
+              </tr>
+
+              <tr class="row m-0">
+                <td class="col-4">‎</td>
+                <td class="col-4"></td>
+                <td class="col-4"></td>
+              </tr>
+            </tbody>
+          </table>
+
+          <!-- tabla 2 -->
+          <table class="table table-danger table-hover m-0">
+            <thead>
+              <tr>
+                <th colspan="3" class="fs-4 text-center bg-gradient">
+                  Upcoming events statistics by category
+                </th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr class="row m-0">
+                <td class="col-4">Categories</td>
+                <td class="col-4">Revenues</td>
+                <td class="col-4">Percentage of attendance</td>
+              </tr>
+
+              <tr class="row m-0">
+                <td class="col-4">‎</td>
+                <td class="col-4"></td>
+                <td class="col-4"></td>
+              </tr>
+
+              <tr class="row m-0">
+                <td class="col-4">‎</td>
+                <td class="col-4"></td>
+                <td class="col-4"></td>
+              </tr>
+
+              <tr class="row m-0">
+                <td class="col-4">‎</td>
+                <td class="col-4"></td>
+                <td class="col-4"></td>
+              </tr>
+            </tbody>
+          </table>
+
+          <!-- tabla 3 -->
+          <table class="table table-danger table-hover m-0">
+
+            <thead>
+              <tr>
+                <th colspan="3" class="fs-4 text-center bg-gradient">
+                  Past events statistics by category
+                </th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr class="row m-0">
+                <td class="col-4">Categories</td>
+                <td class="col-4">Revenues</td>
+                <td class="col-4">Percentage of attendance</td>
+              </tr>
+
+              <tr class="row m-0">
+                <td class="col-4">‎</td>
+                <td class="col-4"></td>
+                <td class="col-4"></td>
+              </tr>
+
+              <tr class="row m-0">
+                <td class="col-4">‎</td>
+                <td class="col-4"></td>
+                <td class="col-4"></td>
+              </tr>
+
+              <tr class="row m-0">
+                <td class="col-4">‎</td>
+                <td class="col-4"></td>
+                <td class="col-4"></td>
+              </tr>
+            </tbody>
+          </table>
+
+
+        </div>
+      </div>
     </main>
 
     <footer
-      class="d-flex flex-wrap justify-content-around align-items-center py-3 my-4 bg-dark">
+      class="d-flex flex-wrap justify-content-around align-items-center py-3 mt-5 bg-dark">
       <div class="col-md-4 d-flex align-items-center">
         <p class="mb-3 mb-md-0 text-bg-dark fs-2">FE06-TN</p>
       </div>
@@ -175,7 +281,7 @@
         </li>
       </ul>
     </footer>
-
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
