--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -216,139 +216,8 @@
       </form>
 
       <!-- tarjetas -->
-      <div class="container">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
-          <article class="col">
-            <div class="card h-100">
-              <img
-                src="../assets/img/Cinema.jpg"
-                class="card-img-top h-75"
-                alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Natus necessitatibus ratione modi laborum labore consequuntur!
-                </p>
-              </div>
-              <div class="card-footer d-flex justify-content-between">
-                <p class="m-2">Price: $000,00</p>
-                <a href="#" class="btn btn-outline-danger">
-                  See more
-                </a>
-              </div>
-            </div>
-          </article>
-
-          <article class="col">
-            <div class="card h-100">
-              <img
-                src="../assets/img/Costume_Party.jpg"
-                class="card-img-top h-75"
-                alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Natus necessitatibus ratione modi laborum labore consequuntur!
-                </p>
-              </div>
-              <div class="card-footer d-flex justify-content-between">
-                <p class="m-2">Price: $000,00</p>
-                <a href="#" class="btn btn-outline-danger">
-                  See more
-                </a>
-              </div>
-            </div>
-          </article>
-
-          <article class="col">
-            <div class="card h-100">
-              <img
-                src="../assets/img/Food_Fair.jpg"
-                class="card-img-top h-75"
-                alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Natus necessitatibus ratione modi laborum labore consequuntur!
-                </p>
-              </div>
-              <div class="card-footer d-flex justify-content-between">
-                <p class="m-2">Price: $000,00</p>
-                <a href="#" class="btn btn-outline-danger">
-                  See more
-                </a>
-              </div>
-            </div>
-          </article>
-
-          <article class="col">
-            <div class="card h-100">
-              <img
-                src="../assets/img/Marathon.jpg"
-                class="card-img-top h-75"
-                alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Natus necessitatibus ratione modi laborum labore consequuntur!
-                </p>
-              </div>
-              <div class="card-footer d-flex justify-content-between">
-                <p class="m-2">Price: $000,00</p>
-                <a href="#" class="btn btn-outline-danger">
-                  See more
-                </a>
-              </div>
-            </div>
-          </article>
-
-          <article class="col">
-            <div class="card h-100">
-              <img
-                src="../assets/img/Museum_Tour.jpg"
-                class="card-img-top h-75"
-                alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Natus necessitatibus ratione modi laborum labore consequuntur!
-                </p>
-              </div>
-              <div class="card-footer d-flex justify-content-between">
-                <p class="m-2">Price: $000,00</p>
-                <a href="#" class="btn btn-outline-danger">
-                  See more
-                </a>
-              </div>
-            </div>
-          </article>
-
-          <article class="col">
-            <div class="card h-100">
-              <img
-                src="../assets/img/Music_Concert.jpg"
-                class="card-img-top h-75"
-                alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                  Natus necessitatibus ratione modi laborum labore consequuntur!
-                </p>
-              </div>
-              <div class="card-footer d-flex justify-content-between">
-                <p class="m-2">Price: $000,00</p>
-                <a href="#" class="btn btn-outline-danger">
-                  See more
-                </a>
-              </div>
-            </div>
-          </article>
+      <div class="container mb-5">
+        <div id="cards" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3">
         </div>
       </div>
     </main>
@@ -391,6 +260,8 @@
         </li>
       </ul>
     </footer>
+
+    <script src="../assets/js/upcoming_events.js"></script>
     
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
