--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -23,7 +23,7 @@
 
   <body>
     <header class="d-flex justify-content-center flex-column">
-      <nav class="navbar navbar-expand-md navbar-dark bd-navbar bg-dark">
+      <nav class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark">
         <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
           <figure class="my-0">
             <img
@@ -89,7 +89,7 @@
       </nav>
 
       <!-- CAROUSEL -->
-      <div class="bg-dark bg-gradient">
+      <div class="bg-dark bg-gradient mgn">
         <div id="carouselExample" class="container-xxl carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
