--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="no-referrer">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -137,66 +138,8 @@
       <!-- FORMULARIO -->
       <form class="my-5">
         <div class="row">
-          <fieldset class="d-flex flex-wrap col-12 col-xl-8 mb-2 my-1">
-            <div class="form-check ms-2 mt-1 px-4">
-              <label class="form-check-label" for="category-1">
-                <input
-                  type="checkbox"
-                  name="category"
-                  class="form-check-input"
-                  value="category-1"
-                  id="category-1">
-                <span class="">Category 1</span>
-              </label>
-            </div>
+          <fieldset id="checkboxes" class="d-flex flex-wrap col-12 col-xl-8 mb-2 my-1">
 
-            <div class="form-check ms-2 mt-1 px-4">
-              <label class="form-check-label" for="category-2">
-                <input
-                  type="checkbox"
-                  name="category"
-                  class="form-check-input"
-                  value="category-2"
-                  id="category-2">
-                Category 2
-              </label>
-            </div>
-
-            <div class="form-check ms-2 mt-1 px-4">
-              <label class="form-check-label" for="category-3">
-                <input
-                  type="checkbox"
-                  name="category"
-                  class="form-check-input"
-                  value="category-3"
-                  id="category-3">
-                Category 3
-              </label>
-            </div>
-
-            <div class="form-check ms-2 mt-1 px-4">
-              <label class="form-check-label" for="category-4">
-                <input
-                  type="checkbox"
-                  name="category"
-                  class="form-check-input"
-                  value="category-4"
-                  id="category-4">
-                Category 4
-              </label>
-            </div>
-
-            <div class="form-check ms-2 mt-1 px-4">
-              <label class="form-check-label" for="category-5">
-                <input
-                  type="checkbox"
-                  name="category"
-                  class="form-check-input"
-                  value="category-5"
-                  id="category-5">
-                Category 5
-              </label>
-            </div>
           </fieldset>
 
           <!-- busqueda -->
@@ -206,13 +149,8 @@
                 type="text"
                 class="form-control"
                 aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default">
-              <button
-                type="submit"
-                class="input-group-text"
-                id="inputGroup-sizing-default">
-                <i class="bi bi-search"></i>
-              </button>
+                aria-describedby="inputGroup-sizing-default"
+                placeholder="search">
             </div>
           </div>
         </div>
@@ -264,7 +202,7 @@
       </ul>
     </footer>
 
-    <script src="assets/js/home.js"></script>
+    <script type="module" src="assets/js/home.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
