--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
       <!-- tarjetas -->
       <div class="container mb-5">
         <div id="cards" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3">
-        </div>
+        <!-- <div id="cards" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3 justify-content-center"> -->
+      </div>
       </div>
     </main>
 
