--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
       <div class="bg-dark bg-gradient mgn">
         <div id="carouselExample" class="container-xxl carousel slide">
           <div class="carousel-inner">
+
             <div class="carousel-item active">
               <h2 class="text-center p-5 text-light-emphasis">HOME</h2>
             </div>
+
             <div class="carousel-item">
               <h2 class="text-center p-5 text-light-emphasis">
                 UPCOMING EVENTS
@@ -114,6 +116,7 @@
               <h2 class="text-center p-5 text-light-emphasis">STATS</h2>
             </div>
           </div>
+
           <button
             class="carousel-control-prev"
             type="button"
@@ -203,7 +206,7 @@
       </ul>
     </footer>
 
-    <script type="module" src="assets/js/home.js"></script>
+    <script type="module" src="assets/js/index.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
