--- a/pages/details.html
+++ b/pages/details.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="referrer" content="no-referrer" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous">
+      crossorigin="anonymous" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
 
-    <link rel="stylesheet" href="../assets/styles/style.css">
+    <link rel="stylesheet" href="../assets/styles/style.css" />
 
     <link
       rel="shortcut icon"
       href="../assets/img/Drawing1-Model.svg"
-      type="image/x-icon">
+      type="image/x-icon" />
     <title>Details</title>
   </head>
 
   <body>
     <header class="d-flex justify-content-center flex-column">
-      <nav class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark">
+      <nav
+        class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark">
         <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
           <figure class="my-0">
             <img
               src="../assets/img/Logo_Amazing_Events.png"
               alt="Logo Amazing Events"
-              width="120">
+              width="120" />
           </figure>
 
           <button
@@ -50,14 +52,14 @@
               viewBox="0 0 16 16">
               <path
                 fill-rule="evenodd"
-                d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
             </svg>
           </button>
 
           <!-- Enlaces -->
 
           <div class="collapse navbar-collapse" id="bdNavbar">
-            <hr class="d-md-none text-white-50">
+            <hr class="d-md-none text-white-50" />
 
             <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
               <li
@@ -136,31 +138,9 @@
     <main class="container-fluid">
       <div>
         <div class="row d-flex justify-content-center my-5">
-          <div class="card text-center my-3 mb-3 text- my-3 col-8 p-0">
-            <div class="row g-0">
-              <div class="col-lg-6">
-                <img
-                  src="../assets/img/Costume_Party.jpg"
-                  class="img-fluid rounded w-100 h-100"
-                  alt="...">
-              </div>
-              <div class="col-lg-6">
-                <div class="card-body">
-                  <h5 class="card-title">Name</h5>
-                  <div class="card-text">
-                    <ul class="list-group list-group-flush">
-                      <li class="list-group-item">date</li>
-                      <li class="list-group-item">description</li>
-                      <li class="list-group-item">category</li>
-                      <li class="list-group-item">place</li>
-                      <li class="list-group-item">capacity</li>
-                      <li class="list-group-item">assistance or estimate</li>
-                      <li class="list-group-item">Price: $ 000.00</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div
+            id="detailCard"
+            class="card text-center m-3 my-3 col-12 col-md-8 col-xxl-6 p-0">
           </div>
         </div>
       </div>
@@ -205,6 +185,7 @@
       </ul>
     </footer>
 
+    <script type="module" src="../assets/js/details.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
