--- a/pages/stats.html
+++ b/pages/stats.html
@@ -96,39 +96,18 @@
         <div id="carouselExample" class="container-xxl carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <h2 class="text-center p-5 text-light-emphasis">HOME</h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">
-                UPCOMING EVENTS
-              </h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">PAST EVENTS</h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">CONTACT</h2>
-            </div>
-            <div class="carousel-item">
               <h2 class="text-center p-5 text-light-emphasis">STATS</h2>
             </div>
+
+              <a class="txtDec carousel-control-prev" href="contact.html">
+                <span class="bi bi-caret-left fs-2" aria-hidden="true"></span>
+              </a>
+
+              <a class="txtDec carousel-control-next" href="../index.html">
+                <span class="bi bi-caret-right fs-2" aria-hidden="true"></span>
+              </a>
+
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev">
-            <span class="bi bi-caret-left fs-2" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next">
-            <span class="bi bi-caret-right fs-2" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </div>
     </header>
