--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
   <body>
     <header class="d-flex justify-content-center flex-column">
-      <nav class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark">
+      <nav
+        class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark">
         <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
           <figure class="my-0">
             <img
@@ -96,43 +97,19 @@
       <div class="bg-dark bg-gradient mgn">
         <div id="carouselExample" class="container-xxl carousel slide">
           <div class="carousel-inner">
-
             <div class="carousel-item active">
               <h2 class="text-center p-5 text-light-emphasis">HOME</h2>
             </div>
 
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">
-                UPCOMING EVENTS
-              </h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">PAST EVENTS</h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">CONTACT</h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">STATS</h2>
-            </div>
-          </div>
+              <a class="txtDec carousel-control-prev" href="pages/stats.html">
+                <span class="bi bi-caret-left fs-2" aria-hidden="true"></span>
+              </a>
 
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev">
-            <span class="bi bi-caret-left fs-2" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next">
-            <span class="bi bi-caret-right fs-2" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+              <a class="txtDec carousel-control-next" href="pages/upcoming_events.html">
+                <span class="bi bi-caret-right fs-2" aria-hidden="true"></span>
+              </a>
+
+          </div>
         </div>
       </div>
     </header>
@@ -141,9 +118,9 @@
       <!-- FORMULARIO -->
       <form class="my-5">
         <div class="row">
-          <fieldset id="checkboxes" class="d-flex flex-wrap col-12 col-xl-8 mb-2 my-1">
-
-          </fieldset>
+          <fieldset
+            id="checkboxes"
+            class="d-flex flex-wrap col-12 col-xl-8 mb-2 my-1"></fieldset>
 
           <!-- busqueda -->
           <div class="col-12 col-xl-4">
@@ -152,7 +129,6 @@
                 type="text"
                 class="form-control"
                 aria-label="Sizing example input"
-                aria-describedby="inputGroup-sizing-default"
                 placeholder="search">
             </div>
           </div>
@@ -161,9 +137,11 @@
 
       <!-- tarjetas -->
       <div class="container mb-5">
-        <div id="cards" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3">
-        <!-- <div id="cards" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3 justify-content-center"> -->
-      </div>
+        <div
+          id="cards"
+          class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3">
+          <!-- <div id="cards" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-3 justify-content-center"> -->
+        </div>
       </div>
     </main>
 
