--- a/pages/details.html
+++ b/pages/details.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="referrer" content="no-referrer" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="no-referrer">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous" />
+      crossorigin="anonymous">
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="../assets/styles/style.css" />
+    <link rel="stylesheet" href="../assets/styles/style.css">
 
     <link
       rel="shortcut icon"
       href="../assets/img/Drawing1-Model.svg"
-      type="image/x-icon" />
+      type="image/x-icon">
     <title>Details</title>
   </head>
 
@@ -32,7 +32,7 @@
             <img
               src="../assets/img/Logo_Amazing_Events.png"
               alt="Logo Amazing Events"
-              width="120" />
+              width="120">
           </figure>
 
           <button
@@ -52,14 +52,14 @@
               viewBox="0 0 16 16">
               <path
                 fill-rule="evenodd"
-                d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
             </svg>
           </button>
 
           <!-- Enlaces -->
 
           <div class="collapse navbar-collapse" id="bdNavbar">
-            <hr class="d-md-none text-white-50" />
+            <hr class="d-md-none text-white-50">
 
             <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
               <li
@@ -98,39 +98,9 @@
         <div id="carouselExample" class="container-xxl carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <h2 class="text-center p-5 text-light-emphasis">HOME</h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">
-                UPCOMING EVENTS
-              </h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">PAST EVENTS</h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">CONTACT</h2>
-            </div>
-            <div class="carousel-item">
-              <h2 class="text-center p-5 text-light-emphasis">STATS</h2>
+              <h2 class="text-center p-5 text-light-emphasis">DETAILS</h2>
             </div>
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev">
-            <span class="bi bi-caret-left fs-2" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next">
-            <span class="bi bi-caret-right fs-2" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </div>
     </header>
@@ -142,6 +112,14 @@
             id="detailCard"
             class="card text-center m-3 my-3 col-12 col-md-8 col-xxl-6 p-0">
           </div>
+
+          <div class="d-flex justify-content-center">
+            <button id="buttonBack" type="button" class="btn btn-dark">
+              <i class="bi bi-caret-left"></i>
+              Go back
+            </button>
+          </div>
+
         </div>
       </div>
     </main>
