connect to Amazing Avents API

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="assets/styles/style.css">
     <link
       rel="shortcut icon"
-      href="assets/img/Drawing1-Model.svg"
+      href="assets/img/favicon.png"
       type="image/x-icon">
     <title>Home</title>
   </head>
@@ -116,7 +116,7 @@
 
     <main class="container">
       <!-- FORMULARIO -->
-      <form class="my-5">
+      <form id="form" class="my-5">
         <div class="row">
           <fieldset
             id="checkboxes"
