--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,7 @@
 
     <link
       rel="shortcut icon"
-      href="../assets/img/Drawing1-Model.svg"
+      href="../assets/img/favicon.png"
       type="image/x-icon">
     <title>Contact</title>
   </head>
