--- a/pages/stats.html
+++ b/pages/stats.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="no-referrer">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,7 +18,7 @@
 
     <link
       rel="shortcut icon"
-      href="../assets/img/Drawing1-Model.svg"
+      href="../assets/img/favicon.png"
       type="image/x-icon">
     <title>Stats</title>
   </head>
@@ -118,10 +119,10 @@
         <div class="pt-5">
 
           <!-- tabla 1 -->
-          <table class="table table-danger table-hover m-0">
+          <table class="table table-light table-hover m-0">
             <thead>
               <tr>
-                <th colspan="3" scope="col" class="fs-4 text-center bg-gradient">
+                <th colspan="3" scope="col" class="fs-5 text-center text-light bg-dark bg-gradient">
                   Events statistics
                 </th>
               </tr>
@@ -129,90 +130,70 @@
 
             <tbody>
               <tr class="row m-0">
-                <td class="col-4">Events with highest percentage of attendance</td>
-                <td class="col-4">Events with lowest percentage of attendance</td>
-                <td class="col-4">Events with larger capacity</td>
+                <td class="col-4 bg-dark-subtle text-center">Event with highest percentage of attendance</td>
+                <td class="col-4 bg-dark-subtle text-center">Event with lowest percentage of attendance</td>
+                <td class="col-4 bg-dark-subtle text-center">Event with larger capacity</td>
               </tr>
 
               <tr class="row m-0">
-                <td class="col-4">‎</td>
-                <td class="col-4"></td>
-                <td class="col-4"></td>
+                <td class="col-4">
+                  <ul id="highestAttendance">
+
+                  </ul>
+                </td>
+
+                <td class="col-4">
+                  <ul id="lowestAttendance">
+
+                  </ul>
+                </td>
+                
+                <td class="col-4">
+                  <ul id="largestEvents"></ul>
+                </td>
+
               </tr>
+
             </tbody>
           </table>
 
           <!-- tabla 2 -->
-          <table class="table table-danger table-hover m-0">
+          <table class="table table-light table-hover m-0">
             <thead>
               <tr>
-                <th colspan="3" class="fs-4 text-center bg-gradient">
+                <th colspan="3" class="fs-5 text-center text-light bg-dark bg-gradient">
                   Upcoming events statistics by category
                 </th>
               </tr>
             </thead>
 
-            <tbody>
+            <tbody id="upcomingStats">
               <tr class="row m-0">
-                <td class="col-4">Categories</td>
-                <td class="col-4">Revenues</td>
-                <td class="col-4">Percentage of attendance</td>
+                <td class="col-4 bg-dark-subtle">Categories</td>
+                <td class="col-4 bg-dark-subtle text-center">Revenues</td>
+                <td class="col-4 bg-dark-subtle text-center">Percentage of attendance</td>
               </tr>
 
-              <tr class="row m-0">
-                <td class="col-4">‎</td>
-                <td class="col-4"></td>
-                <td class="col-4"></td>
-              </tr>
 
-              <tr class="row m-0">
-                <td class="col-4">‎</td>
-                <td class="col-4"></td>
-                <td class="col-4"></td>
-              </tr>
-
-              <tr class="row m-0">
-                <td class="col-4">‎</td>
-                <td class="col-4"></td>
-                <td class="col-4"></td>
-              </tr>
             </tbody>
           </table>
 
           <!-- tabla 3 -->
-          <table class="table table-danger table-hover m-0">
+          <table class="table table-light table-hover m-0">
 
             <thead>
               <tr>
-                <th colspan="3" class="fs-4 text-center bg-gradient">
+                <th colspan="3" class="fs-5 text-center text-light bg-dark bg-gradient">
                   Past events statistics by category
                 </th>
               </tr>
             </thead>
 
-            <tbody>
+            <tbody id="pastStats">
               <tr class="row m-0">
-                <td class="col-4">Categories</td>
-                <td class="col-4">Revenues</td>
-                <td class="col-4">Percentage of attendance</td>
-              </tr>
-
-              <tr class="row m-0">
-                <td class="col-4">‎</td>
-                <td class="col-4"></td>
-                <td class="col-4"></td>
-              </tr>
-
-              <tr class="row m-0">
-                <td class="col-4">‎</td>
-                <td class="col-4"></td>
-                <td class="col-4"></td>
-              </tr>
-
-              <tr class="row m-0">
-                <td class="col-4">‎</td>
-                <td class="col-4"></td>
-                <td class="col-4"></td>
+                <td class="col-4 bg-dark-subtle">Categories</td>
+                <td class="col-4 bg-dark-subtle text-center">Revenues</td>
+                <td class="col-4 bg-dark-subtle text-center">Percentage of attendance</td>
               </tr>
             </tbody>
           </table>
@@ -260,6 +241,7 @@
         </li>
       </ul>
     </footer>
+    <script type="module" src="../assets/js/stats.js"></script>
     
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
