--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -17,7 +17,7 @@
 
     <link
       rel="shortcut icon"
-      href="../assets/img/Drawing1-Model.svg"
+      href="../assets/img/favicon.png"
       type="image/x-icon">
     <title>Upcoming Events</title>
   </head>
@@ -112,7 +112,7 @@
 
     <main class="container">
       <!-- FORMULARIO -->
-      <form class="my-5">
+      <form id="form" class="my-5">
         <div class="row">
           <fieldset id="checkboxes" class="d-flex flex-wrap col-12 col-xl-8 mb-2 my-1">
 
